...
            style: GoogleFonts.poppins(fontWeight: FontWeight.bold)),
        content: Text("Are you sure you want to log out?",
            style: GoogleFonts.poppins()),
        actions: [
          TextButton(
              onPressed: () => Navigator.pop(context, false),
              child: const Text("Cancel")),
          TextButton(
            onPressed: () => Navigator.pop(context, true),
            child:
                Text("Logout", style: GoogleFonts.poppins(color: Colors.red)),
          ),
        ],
...
                  icon: Iconsax.brush_2,
                  label: 'Visualizer',
                  onTap: () => _navigateToWithFade(const VisualizerPage()),
                ),
                _BottomItem(
                  icon: Icons.explore,
                  label: 'Explore',
                  onTap: () => _navigateToWithFade(const ExploreProductPage()),
                ),
                _BottomItem(
                  icon: Iconsax.user,
                  label: 'Profile',
                  onTap: () => _navigateToWithFade(const PersonalInfoPage()),
                ),
                _BottomItem(
                  icon: Iconsax.shopping_cart,
                  label: 'Cart',
                  onTap: () =>
                      _navigateToWithFade(const CartPage(), checkAuth: true),
                ),
              ],
            ),
          ),
...
  void _showLoginPrompt() {
    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        shape:
            RoundedRectangleBorder(borderRadius: BorderRadius.circular(16.0)),
        title: Text("Login Required", style: GoogleFonts.poppins()),
        content: Text("You need to be logged in to use this feature.",
            style: GoogleFonts.poppins()),
        actions: [
          TextButton(
              onPressed: () => Navigator.pop(context),
              child: const Text("Cancel")),
...
            },
            style: ElevatedButton.styleFrom(
                backgroundColor: Colors.deepOrange,
                shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(8))),
            child:
                Text("Login", style: GoogleFonts.poppins(color: Colors.white)),
          )
        ],
      ),
    );
  }
}
...
